# UrbanMapper

./: .bumpversion.toml  .copier-answers.yml  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  duties.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  ask_question.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml  report_bug.md
.github/workflows/: automatic_versioning.yml  compile.yaml  docs.yml  documentation-links.yml  publish_pypi.yml  test.yml
config/: ruff.toml
docs/: .dates_cache.jsonl  BRANDING.md  CONTRIBUTING.md  CONTRIBUTING_DEV.md  EXAMPLES.md  USER_EXPERIENCE_DESIGN.md  index.md
docs/.overrides/partials/: comments.html
docs/api/: auctus.md  enrichers.md  filters.md  imputers.md  index.md  interactive_table_vis.md  jupyter_gis.md  loaders.md  models.md  pipeline_generators.md  pipelines.md  urban_layers.md  visualisers.md
docs/copy_of_examples/1-Per-Module/: 1-loader.ipynb  2-urban_layer.ipynb  4-filter.ipynb  5-enricher.ipynb  6-visualiser.ipynb  7-urban_pipeline.ipynb
docs/copy_of_examples/2-End-to-End/: 2-pipeline_way.ipynb
docs/copy_of_examples/4-External-Libraries-Usages/: 1-auctus_search.ipynb
docs/getting-started/: examples.md  installation.md  quick-start_pipeline.md  quick-start_step_by_step.md
docs/private/custom_css/: extra.css
docs/user-guide/: overview.md
docs/user-guide/modules/: 1-loaders.md  2-urban-layers.md  3-imputers.md  4-filters.md  5-enrichers.md  6-visualisers.md  7-pipelines.md  8-pipeline-generators.md
examples/: 1-[Step-by-Step][with_defaults][Using Auctus].ipynb  2-[Step-by-Step][Work With CSV & PARQUET].ipynb  3-OSMNX_MAPPING_works_with_CSV_&_PARQUET.ipynb  3-[Step-by-Step][Work With SHAPEFILES].ipynb  4-OSMNX_MAPPING_with_Auctus_different_enricher.ipynb  4-[Step-by-Step][Work With Different Enrichers].ipynb  5-OSMNX_MAPPING_advanced_pipelining.ipynb  5-OSMNX_MAPPING_basic_pipelining.ipynb  5-[Step-by-Step][Work At Nodes or Edges Level].ipynb  6-OSMNX_MAPPING_advanced_pipelining.ipynb  6-[Pipeline][Introduction to Pipelining].ipynb  7-[Pipeline][Advanced Multi Singular Enrichments Pipelining].ipynb  8-[Pipeline][Advanced Multi Enrichments Mutli Mappings].ipynb
examples/1-Per-Module/: 1-loader(modified_for_rasters_project).ipynb  1-loader.ipynb  2-urban_layer.ipynb  3-imputer.ipynb  4-filter.ipynb  5-enricher.ipynb  6-visualiser.ipynb  7-urban_pipeline.ipynb  8-pipeline_generator.ipynb  9-model.ipynb  README.md  [1]loader_geometry_column.ipynb
examples/2-End-to-End/: 1-step_by_step.ipynb  2-pipeline_way.ipynb
examples/3-Case-Studies/1-Downtown-BK-Collisions/: 1-Downtown_BK_Collisions_StepByStep.ipynb  (+3 more)
examples/4-External-Libraries-Usages/: 1-auctus_search.ipynb  2-interactive_table_vis.ipynb
examples/Basics/: [1]loader.ipynb  [2]urban_layer.ipynb  [3]imputer.ipynb  [4]filter.ipynb  [5]enricher.ipynb  [6]visualiser.ipynb  [7]urban_pipeline.ipynb  [8]pipeline_generator.ipynb
examples/End-to-End/: [1]step_by_step.ipynb  [2]pipeline_way.ipynb
examples/External Libraries Usages/: [1]auctus_search.ipynb  [2]interactive_table_vis.ipynb
scripts/: gen_credits.py  get_version.py
src/osmnx_mapping/: __init__.py  __main__.py  cli.py  config.yaml  debug.py  osmnx_maping.py
src/urban_mapper/: __init__.py  cli.py  config.yaml  debug.py  urban_mapper.py
test/: README.md
test/data_files/: bryant_park.osm  nyc_borough_boundaries.geojson  simple_pipeline.dill  small_VZV_Speed_Humps_with_LatLon.csv  small_VZV_Speed_Humps_with_LatLon.parquet  small_nyc_education.csv  small_nyc_neighborhoods.csv  small_nyc_neighborhoods_missing-values.csv
tests/: __init__.py  test_cli.py
(+236 files in other folders)
