[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "urban-mapper"
description = "ðŸ—ºï¸ Spatial Join & Enrich any urban layer given any external urban dataset of interest, streamline your urban analysis with Scikit-Learn-Like pipelines, and share your insights with the urban research community!"
authors = [
     {name = "Provost Simon", email = "sgp9504@nyu.edu"}, # First author & maintainer
     {name = "New York University", email = "fairuse@nyu.edu"}, # Copyright holder
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "folium>=0.19.4",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.5",
    "jupyter-server-ydoc>=1.1.0",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab-widgets>=3.0.13",
    "mapclassify>=2.8.1",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "notebook==6.4.12",
    "psygnal>=0.12.0",
    "scikit-learn>=1.6.1",
    "skrub>=0.5.1",
    "tqdm>=4.67.1",
    "traitlets==5.9.0",
    "jupytergis-core>=0.2.1",
    "jupytergis-qgis>=0.2.1",
    "millify>=0.1.1",
    "beartype>=0.19.0",
    "pre-commit>=4.1.0",
    "osmnx>=2.0.1",
    "geopandas>=1.0.1",
    "dependency-injector>=4.45.0",
    "pyarrow>=19.0.1",
    "auctus-search",
    "loguru>=0.7.3",
    "thefuzz>=0.22.1",
    "ell-ai[all]>=0.0.17",
    "dill>=0.3.9",
    "jupytergis==0.4.4",
    "jupyter-resource-usage>=1.1.1",
    "nbstripout>=0.8.1",
    "geopy>=2.4.1",
    "alive-progress>=3.2.0",
]

[project.urls]
Homepage = "https://simonprovost.github.io/urban-mapper"
Documentation = "https://simonprovost.github.io/urban-mapper"
Changelog = "https://simonprovost.github.io/urban-mapper/changelog"
Repository = "https://github.com/simonprovost/urban-mapper"
Issues = "https://github.com/simonprovost/urban-mapper/issues"
Discussions = "https://github.com/simonprovost/urban-mapper/discussions"
Gitter = "https://gitter.im/urban-mapper/community"
Funding = "https://github.com/sponsors/simonprovost"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "*.md",
    "LICENSE",
]

[tool.uv.sources]
auctus-search = { git = "https://github.com/VIDA-NYU/auctus_search.git", branch = "main" }

[dependency-groups]
dev = [
    # maintenance
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",

    # ci
    "duty>=1.4",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",

    # docs
    "black>=24.4",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]
